--- a/docs/1.1-inicio.md
+++ b/docs/1.1-inicio.md
@@ -2,10 +2,65 @@
 title: "Introducción"
 permalink: /docs/instalacion/inicio/
 excerpt: "Página de inicio"
-chapter: "Instalación" 
+chapter: "Instalación"
 sidebar: docs
 ---
 
 # Inicio
 
 Página inicial del manual de instalación
+
+
+|   **Nombre**        |   **Tipo de dato**   |   **Obligatorio**  |   **Descripción**                                                  |
+| ------------------- | -------------------- | ------------------ | ------------------------------------------------------------------ |
+| consoleType         | String               | Si                 | Identificador de la consola - Specialist= 1  - Client = Administrator= 3   |
+| tempItemId          | int                  | Si                 | Identificador de ci temporal                                       |
+| name                | String               | Si                 | Nombre del CI                                                      |
+| categoryId          | Int                  | Si                 | Categoría del CI                                                   |
+| responsibleId       | Int                  | Sí                 | Responsable del Ci                                                 |
+| stateId             | Int                  | Si                 | Estado del CI                                                      |
+| projectId           | Array                | Si                 | Lista con Identificadores de proyecto                              |
+| assetTag            | string               | No                 | Identificador de etiqueta de inventario de CI                      |
+| acceptDate          | long                 | No                 | Fecha aceptación de la compañía, Tiempo Unix  en milisegundos      |
+| authorId            | Int                  | No                 | Identificador del autor o del registro de CI                       |
+| barCode             | String               | No                 | Código de barras                                                   |
+| brandId             | Int                  | No                 | Identificador de marca de CI en la base de  datos / catálogo       |
+| checkinDate         | Long                 | No                 | Día de registro formato unix                                       |
+| checkOutDate        | Long                 | No                 | Fecha en que se borró / se dio de baja CI de  la empresa           |
+| costCenterId        | Int                  | No                 | Centro de costos del CI                                            |
+| depreciationMethod  | Int                  | No                 | Metodo de depreciación  1. Indica que la depreciación se calculará  utilizando el método de la línea recta  2. Indica que la depreciación se calculará utilizando el método de la suma de los dígitos de los años  |
+| description         | String               | No                 | Descripcion                                                        |
+| impactId            | Int                  | No                 | Número identificador del impacto de CI en la  organización         |
+| installationDate    | long                 | No                 | Fecha de instalación de CI                                         |
+| manufacturerId      | Int                  | No                 | Identificador del fabricante de CI en la base  de datos / catálogo |
+| modelId             | Int                  | No                 | Número de identificación del modelo de CI                          |
+| price               | Int                  | No                 | Precio                                                             |
+| providerId          | int                  | No                 | Identificador de proveedor de CI en la base  de datos / catálogo   |
+| rfid                | String               | No                 | Identificador de radiofrecuencia para el CI                        |
+| reasonId            | Int                  | No                 | Identificador de la razón por la que se  encuentra en el estado  actual      |
+| reponsibleDate      | Long                 | No                 | Fecha en la que los usuarios se hicieron  responsables de la IC Formato unix |
+| residualValue       | Decimal              | No                 | Valor de CI para ahorrar del precio original                       |
+| riskId              | int                  | No                 | Nivel de riesgo, NoData = 0, Low= 1, Medium = 2,High = 3           |
+| serial              | String               | No                 | Identificador de serie de CI                                       |
+| size                | Int                  | No                 | Valor de tamaño de CI, por ejemplo: 17                             |
+| type                | Int                  | No                 | Identificador del tipo de CI en una  enumeración:  - 21: Elemento de configuración - 48: Paquete   |
+| unit                | Int                  | No                 | Unidad de medidas de CI.                                           |
+| listAdditionalField | Array                | Sí                 | Listado de  campos adicionales                                     |
+| boolValue           | Bool                 | No                 | Valor si es  de tipo checkbox                                      |
+| catalogId           | Int                  | No                 | Identificador  de catálogo (si es un campo de tipo de catálogo)    |
+| dateValue           | Long                 | No                 | Valor si es  de tipo DateTime                                      |
+| description         | String               | No                 | Texto  descriptivo del campo                                       |
+| enable              | Bool                 | No                 | Verdadero si  el campo está habilitado para el estado actual (falso en caso contrario)    |
+| fieldId             | Int                  | No                 | Identificador  único en la fuente de datos                         |
+| fieldType           | int                  | No                 | Describe el  tipo de campo - None = 0, - ShortText = 1, - Datetime = 2, - List = 3, - LongText = 4, - CheckBox = 5, - Numeric = 6, - Recursive = 7, - List2 = 8, - Decimal = 9, - File = 10, - CatalogList = 11, - CatalogTree = 12, - Date = 13, - Time = 14, - Currency = 15, - Link = 16, - Position = 17, - MultiSelect 18      |
+| floatValue          | Decimal              | No                 | Valor si es  de tipo decimal                                       |
+| identifier          | String               | No                 | Identificador                                                      |
+| inputStream         | Stream               | No                 |                                                                    |
+| intValue            | Int                  | No                 | Valor si es  de tipo entero                                        |
+| itemId              | Int                  | No                 | Id. Del  elemento principal.                                       |
+| mandatory           | Bool                 | No                 | Verdadero si  el campo es obligatorio para el estado actual (falso en caso contrario)                                                                                                                        |
+| name                | String               | No                 | Nombre  descriptivo del campo                                      |
+| order               | Int                  | No                 | Posición en  la lista de campos                                    |
+| stringValue         | String               | No                 | Valor si es  de tipo cadena                                        |
+| type                | Int                  | No                 | Tipo de  elemento principal                                        |
+| visible             | Bool                 | No                 | Verdadero si  el campo es visible para el estado actual (falso en caso contrario)  |
